--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <html>                                          <!-- Tarayıcıya bu dosyanın HTML ile kodlandığını bildiriyorum. -->
 
     <head>
-        <title>Patika.dev HTML Ödev 2</title>   <!-- Sayfamın tarayıcı sekmesinde görünen adı -->
+        <title>Sevdiğim Hikâyeler</title>      <!-- Sayfamın tarayıcı sekmesinde görünen adı -->
     </head>
 
-    <body>                                      <!-- Sayfamın içeriği -->
+    <body>                                      <!-- Sayfamın muhtevası -->
 
-        <h1>Cem ÇELİK</h1>                      <!-- Blok Element -->
+        <h1>Cem Çelik</h1>                      <!-- Block Element -->
         <h2>Hakkımda</h2>
             <p>
-            Merhaba, ben Cem. <b>patika.dev</b> ve <b>kodluyoruz.org</b> eğitimlerini takip ederek <b>front-end</b> öğreniyorum.
+                Merhaba, ben Cem. <b>kodluyoruz.org</b> ve <b>patika.dev</b> eğitimlerini takip ederek <b>front-end</b> öğreniyorum.
             </p>
-        
-        <h2>Sevdiğim Hikayeler</h2>
-            <ol>                                <!-- Blok Element -->
+
+        <h2>Sevdiğim Hikâyeler</h2>
+            <ol>                                <!-- Block Element -->
                 <li>Kitaplar                    <!-- Inline Element -->
                     <ul>
                         <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit?from_search=true&from_srp=true&qid=lzpJkYeFzp&rank=1" target="_blank">Hobbit</a></li>
                         <li><a href="https://www.goodreads.com/book/show/9006039-mavi-ku?from_search=true&from_srp=true&qid=fqGteJoGg0&rank=1" target="_blank">Mavi Kuş</a></li>
+                        <li><a href="https://www.goodreads.com/book/show/9274970-gazap-z-mleri?from_search=true&from_srp=true&qid=KCRviTtxl9&rank=1" target="_blank">Gazap Üzümleri</a></li>
                         <li><a href="https://www.goodreads.com/book/show/6771127-ben-d-nyan-n-en-ak-ll-i-nsan-y-m?from_search=true&from_srp=true&qid=Xb8wagN7Fh&rank=1" target="_blank">Ben Dünyanın En Akıllı İnsanıyım</a></li>
                     </ul>
                 </li>
@@ -39,8 +40,9 @@
                 </li>
             </ol>
 
-            <img src="https://images2.imgbox.com/78/7d/AbhEKK2O_o.png" alt="Better Call Saul & Breaking Bad YouTube Banner" width="720">    <!-- Inline Element -->
-            <p>Breaking Bad ve Better Call Saul, Vince Gilligan tarafından kurgulanmış suç ve drama dizileridir. Breaking Bad akciğer kanseri olduğunu öğrenen lise kimya öğretmeni Walter'ın ölmeden önce ailesine para bırakabilmek maksadıyla suça nasıl bulaştığını ve o yolda nasıl ilerlediğini konu alır. Walter'ın' avukatlığını ve pis işlerini yapmak üzere Saul devreye girecektir. Better Call Saul'da ise serseri hayatı yaşayan Jimmy abisinin gözüne girmek için iyi bir avukat olmak isterken gelişen olaylar onu Saul'a dönüştürecektir. </p>
+            <img src="./better-call-saul_breaking-bad_banner.jpg" alt="Better Call Saul & Breaking Bad YouTube Banner"> <!-- Inline Element -->
+            <p>Walter White; düşük ücretle çalışan, sıkıntılı ve üçüncü evre akciğer kanseri teşhisi konulmuş bir lise kimya öğretmenidir. Walter, ailesinin geleceğini güvence altına almak için suç dünyasına adım atar ve eski öğrencisi Jesse Pinkman ile ortaklık kurarak metamfetamin üretir ve dağıtırken suç dünyasının tehlikeleriyle de yüzleşir.</p>
+            <p>Breaking Bad hikâyesinden birkaç yıl önceyi inceleyen Better Call Saul; bir dolandırıcı iken hırslı bir avukat olmayı başaran Jimmy McGill'in daha sonra kânunsuz bir ceza avukatı Saul Goodman'a dönüşümünü anlatıyor.</p>
 
     </body>
 
